tests/src/frontend/syntax/invalid/invalid_lambda_parameter.sk
fun main(): String {
  (a, b + c) -> "Fail"
}
